--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index",
-    "dev": "tsc --watch"
+    "dev": "tsc --build"
   },
   "author": "Miracle Boniface",
   "license": "ISC",
