--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
     "version": 2,
-    "builds": [{"src": "./dist/index.js", "use": "@vercel/node"}],
-    "routes": [{"src": "./dist/{.*}", "dest": "./dist/"}]
+    "builds": [
+        {
+            "src": "./dist/index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "./dist/{.*}",
+            "dest": "./dist/"
+        }
+    ]
 }
