--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a backend server for trade_phere",
   "main": "index.js",
   "engines": {
-    "node": "22.x"
+    "node": ">=18"
   },
   "scripts": {
     "start": "node dist/index",
@@ -16,7 +16,7 @@
   "dependencies": {
     "@moralisweb3/common-evm-utils": "^2.27.2",
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "bitcoinjs-lib": "^6.1.7",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
